# ephemeris-agpl-service

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/: routes_design_time.py  routes_houses.py  routes_meta.py  routes_positions.py  v1.py
app/core/: __init__.py  angle.py  auth.py  errors.py  swe.py  versioning.py
app/models/: requests.py  responses.py
sweph/: .gitkeep  seorbel.txt
tests/: test_auth.py  test_design_time.py  test_houses.py  test_positions.py
